<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/num_1"
        android:layout_width="133dp"
        android:layout_height="46dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="96dp"
        android:text="@string/num_1"
        app:layout_constraintEnd_toStartOf="@+id/ed_num1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/num_2"
        android:layout_width="139dp"
        android:layout_height="45dp"
        android:layout_marginStart="44dp"
        android:layout_marginLeft="44dp"
        android:layout_marginTop="52dp"
        android:text="@string/num_2"
        app:layout_constraintEnd_toStartOf="@+id/ed_num2"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/num_1" />

    <EditText
        android:id="@+id/ed_num1"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/ed_num1"
        app:layout_constraintBaseline_toBaselineOf="@+id/num_1"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/ed_num2"
        android:layout_width="0dp"
        android:layout_height="43dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:ems="10"
        android:hint="@string/ed_num2"
        android:inputType="number"
        android:text="@string/ed_num2"
        app:layout_constraintBaseline_toBaselineOf="@+id/num_2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btn1"
        android:layout_width="139dp"
        android:layout_height="62dp"
        android:layout_marginTop="140dp"
        android:onClick="openSecond"
        android:text="@string/btn1"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_num2" />
</androidx.constraintlayout.widget.ConstraintLayout>